# pose-estimation-fitness-tracking-system

./: Makefile  README.md  create-structure.py  pyproject.toml
docs/: mkdocs.yml
docs/docs/: Data sources.md  index.md  overview_v1.md  paper-draft.md  pipeline.md  potential-models.md  prerequisite.md
pose_estimation_fitness_tracking_system/: __init__.py  dataset.py  features.py  plots.py
pose_estimation_fitness_tracking_system/modeling/: predict.py  train.py
