[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pose_estimation_fitness_tracking_system"
version = "0.0.1"
description = "A real-time pose estimation fitness tracking system uses a camera to detect body joints and movements while a person exercises. It analyzes posture and joint angles to count repetitions and check whether exercises are performed correctly. The system gives instant feedback, helping users avoid injuries and improve workout form without needing a personal trainer."
authors = [
  { name = "Rajendran S" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["pose_estimation_fitness_tracking_system"]
include = ["pyproject.toml", "pose_estimation_fitness_tracking_system/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["pose_estimation_fitness_tracking_system"]
force-sort-within-sections = true

